all chanched in new

--- a/LearnJS/index.html
+++ b/LearnJS/index.html
@@ -4,7 +4,6 @@
         <script acync src='Scripts/testscript.js'></script>
     </head>
 <body>
-        <p> Тема про бар актуальна по средам!</p>
-        <p> А это для проверки гита</p>
+        <p>Всякое по JS</p>
 </body>
 </html>
